Feat: add dependencies and configs

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "endOfLine": "lf",
+  "singleQuote": false,
+  "semi": true,
   "trailingComma": "all"
 }
